<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Horizontal orientation for text entry field and 'send' button-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit"
            android:hint="@string/entry_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button"
            android:hint="@string/button_send"
            android:layout_marginLeft="18dp"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/gray"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout> <!--Ends Horizontal orientation-->

    <!-- 2x2 Grid below Text and 'send' button-->

    <GridLayout
        android:columnCount="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button1"
            android:hint="@string/button_movie"
            android:layout_marginRight="18dp"
            android:layout_marginBottom="5dp"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button2"
            android:hint="@string/button_camera"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button3"
            android:hint="@string/button_map"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/button4"
            android:hint="@string/button_blue"
            android:textColorHint="@color/black"
            android:backgroundTint="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </GridLayout>


</LinearLayout> <!--Ends Vertical orientation-->

